# django-apis

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
begineer/task_manager/config/: settings.py  urls.py
begineer/task_manager/tasks/: models.py  permissions.py  serializers.py  urls.py  views.py
begineer/task_manager/users/: urls.py
beginner/expense_tracker/: Dockerfile  README.md  docker-compose.yml  expense_tracker.db
beginner/expense_tracker/app/: database.py  main.py  models.py  schemas.py
beginner/task_manager/tasks/: tests.py
beginner/task_manager/users/: serializers.py  views.py
expense_tracker/: .env.example  Dockerfile  expense_tracker.db
expense_tracker/.github/workflows/: ci.yml
expense_tracker/app/: auth.py  main.py
expense_tracker/app/routes/: auth.py
job_portal/: .env.example  docker-compose.yml
job_portal/accounts/: permissions.py  serializers.py  views.py
job_portal/applications/: serializers.py  tasks.py  validators.py  views.py
job_portal/applications/migrations/: 0001_initial.py
job_portal/companies/: permissions.py  serializers.py  urls.py
job_portal/companies/migrations/: 0001_initial.py
job_portal/config/: celery.py
job_portal/jobs/: filters.py  permissions.py  serializers.py  urls.py  views.py
job_portal/utils/: cache.py
social_media/: Dockerfile  alembic.ini
social_media/alembic/: env.py
social_media/app/: main.py
social_media/app/models/: user.py
task_manager/: README.md  build.sh
task_manager/config/: settings.py
task_manager/tasks/: admin.py  urls.py
(+5 files in other folders)
